fixing logo stretch problem in navbar

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -18,6 +18,14 @@
 	@include atMediaUp(medium) {
 		justify-content: space-around;
 	}
+
+	.logoLink {
+		display: inline-block;
+	}
+
+	.logo {
+		text-align: left;
+	}
 }
 
 $zindex--aboveFloatingContent: map-get($zindex-map, 'floating-content') + 1;
